Added user hamza

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Version Control Demo</string>
+    <string name="txtVW">Hello Hamza!</string>
 </resources>
